Bug 1765460 part 2: Add the scroll offset of the parent in ParentRelativeBounds. r=morgan

This means that cached bounds stay the same regardless of scroll offset.
The scroll position gets subtracted later when calculating absolute bounds.

Differential Revision: https://phabricator.services.mozilla.com/D144392